--- a/mini-vue/index.html
+++ b/mini-vue/index.html
@@ -19,10 +19,10 @@
     </div>
     
 </body>
-<!-- <script src="./js/dep.js"></script> -->
-<!-- <script src="./js/watcher.js"></script> -->
+<script src="./js/dep.js"></script>
+<script src="./js/watcher.js"></script>
 <script src='./js/observe.js'></script>
-<!-- <script src="./js/compiler.js"></script> -->
+<script src="./js/compiler.js"></script>
 <script src='./js/miniVue.js'></script>
 <script>
     const vm = new MiniVue({
